# You must change these to your own details.
[package]
name = "gizmo-graph-db"
description = "A Rust port of the Cayley Graph Database query engine"
version = "0.0.0"
authors = ["Graham Shaprio <virtualgraham@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
# wasm-bindgen = "0.2.45"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

js-sys = "0.3.22"
serde_json = "1.0"
serde = "^1.0.59"
serde_derive = "^1.0.59"
ordered-float = "1.0"
maplit = "0.1.4"
crossbeam-channel = "0.4"
io-context = "0.2.0"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.36"
features = ["console"]


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"

wasm-bindgen-futures = "0.3.22"
