[package]
name = "gizmo-graph-db"
description = "A Rust port of the Cayley Graph Database query engine"
version = "0.0.0"
authors = ["Graham Shaprio <virtualgraham@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[dependencies]
js-sys = "0.3.22"
serde_json = "1.0"
serde = "^1.0.59"
serde_derive = "^1.0.59"
ordered-float = "1.0"
maplit = "0.1.4"
crossbeam-channel = "0.4"
io-context = "0.2.0"