[package]
name = "gizmo-graph-db"
description = "A Rust port of the Cayley Graph Database query engine"
version = "0.0.0"
authors = ["Graham Shaprio <virtualgraham@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[dependencies]

serde = "^1.0.59"
serde_json = "1.0"
serde_derive = "^1.0.59"

ordered-float = "2.0"
regex = "1.3.6"

[dev-dependencies]
maplit = "1.0.2"